adding followup functionlaity with call and whatsapp track feature etc.

--- a/src/app/leads/followup/followup.component.html
+++ b/src/app/leads/followup/followup.component.html
@@ -1,7 +1,8 @@
+<app-navbar [show]="true"></app-navbar>
 <div class="p-5 font-medium space-y-4">
 
   <h2 class="text-xl font-bold">Follow-ups</h2>
-  <input type="text" placeholder="Search leads… 🔍" class="w-full p-3 rounded-xl bg-gray-100 outline-none text-sm" />
+  <!-- <input type="text" placeholder="Search leads… 🔍" class="w-full p-3 rounded-xl bg-gray-100 outline-none text-sm" /> -->
 
   <div class="flex gap-2">
     <button *ngFor="let tab of tabs" (click)="activeTab = tab.id" class="px-4 py-2 rounded-full text-sm transition"
@@ -11,10 +12,17 @@
     </button>
   </div>
 
-  <div *ngFor="let item of getList()" class="p-4 bg-white rounded-2xl shadow-md space-y-2">
+  <div *ngFor="let item of getList()"
+     (swipeRight)="markComplete(item)"
+     (swipeLeft)="openDetails(item)"
+    [ngClass]="{
+       'swipe-right': swipedItem === item.name && swipeDirection === 'right',
+       'swipe-left': swipedItem === item.name && swipeDirection === 'left'
+     }"
+     class="card p-4 bg-white rounded-2xl shadow-md space-y-2 select-none">
 
     <div class="flex justify-between items-center">
-      <span class="text-lg font-semibold">{{ item.name }}</span>
+      <span class="text-lg font-semibold capitalize">{{ item.name }}</span>
       <span class="px-3 py-1 text-xs rounded-full" [ngClass]="{
           'bg-red-200 text-red-700': item.status === 'site_visit',
           'bg-yellow-200 text-yellow-700': item.status === 'new',
@@ -24,18 +32,47 @@
       </span>
     </div>
 
-    <!-- <div class="text-sm text-gray-700 flex items-center gap-2">
-      🕒 {{ item.time }} · {{ item.type }}
-    </div> -->
+    <div class="text-sm text-gray-700 flex justify-between items-center gap-2">
+      🕒 {{ item.time }}  <span *ngIf="authData.role == 'admin'" class="text-sm text-black">Employee | {{item.assignedTo.name}}</span>
+    </div>
 
     <div class="text-xs text-gray-500">
       📝 {{ item.notes }}
     </div>
 
     <div class="pt-2 flex gap-3">
-      <button (click)="call(item.phone)" class="text-blue-600 hover:scale-110 transition text-lg">📞</button>
-      <button (click)="openWhatsApp(item.phone)" class="text-green-600 hover:scale-110 transition">💬</button>
-      <button class="text-green-600 hover:scale-110 transition text-lg">✅</button>
+      <div class="relative inline-block">
+  <button (click)="call(item)" class="text-blue-600 hover:scale-110 transition text-lg">
+    <img class="w-[30px] h-[30px]" 
+         src="https://static.vecteezy.com/system/resources/previews/023/122/060/large_2x/green-accept-call-icon-answer-call-icon-vector.jpg" 
+         alt="call_image">
+  </button>
+
+  <!-- Badge -->
+  <span *ngIf="item.call_track > 0 && authData.role == 'admin'" 
+        class="absolute top-[-5px] right-[-7px] inline-flex items-center justify-center w-5 h-5 text-xs font-bold text-white bg-red-600 rounded-full">
+    {{ item.call_track }}
+  </span>
+</div>
+    <div class="relative inline-block">
+  <button (click)="openWhatsApp(item)" class="text-blue-600 hover:scale-110 transition text-lg">
+    <img class="w-[30px] h-[30px]" 
+         src="https://png.pngtree.com/png-clipart/20221019/original/pngtree-whatsapp-icon-png-image_8704827.png" 
+         alt="call_image">
+  </button>
+
+  <!-- Badge -->
+  <span *ngIf="item.whatsapp_track > 0 && authData.role == 'admin'" 
+        class="absolute top-[-5px] right-[-7px] inline-flex items-center justify-center w-5 h-5 text-xs font-bold text-white bg-red-600 rounded-full">
+    {{ item.whatsapp_track }}
+  </span>
+</div>
     </div>
   </div>
+  
+<div *ngIf="showUndo"
+     class="fixed bottom-5 left-1/2 -translate-x-1/2 bg-gray-900 text-white px-4 py-2 rounded-lg shadow-lg flex gap-3 text-sm animate-pop">
+  Marked done
+  <button (click)="undo()" class="underline">Undo</button>
+</div>
 </div>
