--- a/src/app/leads/lead-add/lead-add.component.html
+++ b/src/app/leads/lead-add/lead-add.component.html
@@ -83,11 +83,17 @@
                         </select>
                     </div>
                 </div>
-
-                <div>
-                    <label class="block text-white text-sm mb-1">Follow Up</label>
-                    <input type="date" formControlName="followUp"
-                        class="w-full p-2 border border-gray-400 rounded-md focus:outline-none focus:ring-2 focus:ring-gray-500" />
+                <div class="grid grid-cols-2 gap-4">
+                    <div>
+                        <label class="block text-white text-sm mb-1">Follow Up</label>
+                        <input type="date" formControlName="followUp"
+                            class="w-full p-2 border border-gray-400 rounded-md focus:outline-none focus:ring-2 focus:ring-gray-500" />
+                    </div>
+                           <div>
+                        <label class="block text-white text-sm mb-1">Time</label>
+                        <input formControlName="time" type="time"
+                            class="w-full p-2 border border-gray-400 rounded-md focus:outline-none focus:ring-2 focus:ring-gray-500" />
+                    </div>
                 </div>
 
 
@@ -100,7 +106,7 @@
 
                 <!-- Submit Button -->
                 <div class="flex justify-end">
-                    <button type="submit"
+                    <button type="submit" 
                         class="px-4 py-2 rounded-md bg-gray-800 text-white hover:bg-gray-900 transition">Save
                         Lead</button>
                 </div>
