--- a/src/app/leads/modal/modal.component.html
+++ b/src/app/leads/modal/modal.component.html
@@ -71,6 +71,11 @@
             followUp
             <input type="date" formControlName="followUp" class="mt-1 w-full rounded-md border px-3 py-2 bg-gray-50" />
           </label>
+
+            <label class="block text-sm text-gray-700">
+            Time
+            <input type="time" formControlName="time" class="mt-1 w-full rounded-md border px-3 py-2 bg-gray-50" />
+          </label>
         </div>
 
         <div class="flex justify-between items-center">
