--- a/src/app/leads/followup/followup.component.html
+++ b/src/app/leads/followup/followup.component.html
@@ -1,5 +1,5 @@
 <app-navbar [show]="true"></app-navbar>
-<div class="p-5 font-medium space-y-4">
+<div *ngIf="!loader" class="p-5 font-medium space-y-4">
 
   <h2 class="text-xl font-bold">Follow-ups</h2>
   <!-- <input type="text" placeholder="Search leads… 🔍" class="w-full p-3 rounded-xl bg-gray-100 outline-none text-sm" /> -->
@@ -76,3 +76,4 @@
   <button (click)="undo()" class="underline">Undo</button>
 </div>
 </div>
+<app-loader *ngIf="loader" [loader]="loader"></app-loader>
