--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,22 +1,34 @@
 <header class="bg-gray-800/70 shadow-md relative z-50">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between bg-white overflow-visible">
+  <div class="w-full  px-4 py-3 flex items-center justify-between bg-white overflow-visible">
     <img src="assets/images/logo.png" alt="Logo" class="h-14 w-auto" />
 
     @if(show){
-    <div class="relative overflow-visible">
+  <div class="flex items-center justify-between">
+        <div class="relative overflow-visible">
       <button (click)="toggleMenu()" class="p-2 rounded-full hover:bg-gray-200 transition">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-700 temp" fill="none" viewBox="0 0 24 24"
           stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M12 6h.01M12 12h.01M12 18h.01" />
         </svg>
       </button>
-
       <div *ngIf="menuOpen"
         class="absolute right-0 mt-2 w-40 bg-white border border-gray-200 shadow-lg rounded-md overflow-hidden z-50">
-        <a *ngFor="let item of listItem" [routerLink]="item.link"
+        <!-- <div class="flex items-center justify-between bg-gray-400 ">
+          <p class="text-sm">{{authData.name}}</p>
+          <img class="object-contain w-[70px] h-[70px]" [src]="authData.profileImage" alt="profile_image">
+        </div> -->
+        <a *ngFor="let item of listItem;let i = index" [routerLink]="item.link"
           class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-black transition">{{ item.name }}</a>
       </div>
     </div>
+    <div>
+          <img 
+        class="object-cover h-[50px] w-[50px] rounded-full border-2 border-white shadow"
+        [src]="authData?.profileImage"
+        alt="profile_image"
+      />
+    </div>
+  </div>
     }
   </div>
 </header>
