--- a/src/app/leads/lead-list/lead-list.component.html
+++ b/src/app/leads/lead-list/lead-list.component.html
@@ -23,12 +23,13 @@
   <!-- Leads Section -->
   <div class="flex flex-1 items-start justify-center px-4 py-6 relative z-10">
     <div class="max-w-4xl w-full bg-transparent backdrop-blur-md rounded-lg shadow-lg p-6 space-y-4">
-  <div class="flex items-center justify-between">
-         <h2 class="text-2xl font-semibold mb-2 text-white">Leads</h2>
-            <button *ngIf="role.role == 'admin'" class="px-2 bg-gray-800 text-white py-2 rounded-md hover:bg-gray-900 transition" (click)="exportToExcel()">
-            Export
-          </button>
-  </div>
+      <div class="flex items-center justify-between">
+        <h2 class="text-2xl font-semibold mb-2 text-white">Leads</h2>
+        <button *ngIf="role.role == 'admin'"
+          class="px-2 bg-gray-800 text-white py-2 rounded-md hover:bg-gray-900 transition" (click)="exportToExcel()">
+          Export
+        </button>
+      </div>
 
       <div *ngIf="leads?.length === 0" class="p-4 bg-yellow-200/80 text-gray-900 rounded">
         No leads visible.
@@ -38,23 +39,21 @@
   Export PNG
 </button> -->
 
-  <!-- <div id="lead-export-area"> -->
-        <div class="space-y-3">
-        <div *ngFor="let lead of leads"
+      <!-- <div id="lead-export-area"> -->
+      <div class="space-y-3">
+        <input type="text" placeholder="Search by name.." class="p-2 rounded mb-3 w-full text-black"
+          [(ngModel)]="searchText" />
+        <div *ngFor="let lead of filteredLeads"
           class="relative p-4 bg-white/90 rounded-lg shadow flex justify-between items-center hover:shadow-md transition">
-            <button *ngIf="role.role == 'admin'" (click)="deleteLead(lead)"
-              class="absolute top-[-1px] right-[-3px] text-red-500 hover:text-red-700 text-lg transition"
-              title="Delete Lead">
-               <svg xmlns="http://www.w3.org/2000/svg" 
-                fill="none" 
-                viewBox="0 0 24 24" 
-                stroke-width="2" 
-                stroke="currentColor"
-                class="w-5 h-5 text-red-500 group-hover:text-red-700">
-              <path stroke-linecap="round" stroke-linejoin="round" 
+          <button *ngIf="role.role == 'admin'" (click)="deleteLead(lead)"
+            class="absolute top-[-1px] right-[-3px] text-red-500 hover:text-red-700 text-lg transition"
+            title="Delete Lead">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
+              stroke="currentColor" class="w-5 h-5 text-red-500 group-hover:text-red-700">
+              <path stroke-linecap="round" stroke-linejoin="round"
                 d="M6 7h12M9 7V5a1 1 0 011-1h4a1 1 0 011 1v2m2 0v12a2 2 0 01-2 2H8a2 2 0 01-2-2V7z" />
             </svg>
-            </button>
+          </button>
           <div>
             <div class="font-semibold capitalize">{{ lead.name }}</div>
             <div class="text-sm text-gray-600">{{ lead.email }} • {{ lead.phone }}</div>
@@ -72,14 +71,14 @@
           </div>
         </div>
       </div>
-  </div>     
-
     </div>
-  </div>
 
-  <!-- Modal -->
-  <app-modal *ngIf="leads?.length && showModal" [open]="showModal" [leads]="editleads" [timeline]="timeline"
-    (closed)="handleClose($event)">
-  </app-modal>
+  </div>
+</div>
+
+<!-- Modal -->
+<app-modal *ngIf="leads?.length && showModal" [open]="showModal" [leads]="editleads" [timeline]="timeline"
+  (closed)="handleClose($event)">
+</app-modal>
 <!-- </div> -->
 <app-loader *ngIf="loader" [loader]="loader"></app-loader>
