--- a/src/app/leads/followup/followup.component.html
+++ b/src/app/leads/followup/followup.component.html
@@ -1,10 +1,17 @@
 <app-navbar [show]="true"></app-navbar>
 <div *ngIf="!loader" class="p-5 font-medium space-y-4">
+    <div class="absolute inset-0">
+    <div
+      class="absolute inset-0 bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 opacity-30 animate-gradient-x">
+    </div>
+    <img src="assets/images/bg2.jpg" alt="Background" class="w-full h-full object-cover brightness-75">
+    <div class="absolute inset-0 bg-black/25"></div>
+  </div>
 
-  <h2 class="text-xl font-bold">Follow-ups</h2>
+  <h2 class="text-xl font-bold relative z-10">Follow-ups</h2>
   <!-- <input type="text" placeholder="Search leads… 🔍" class="w-full p-3 rounded-xl bg-gray-100 outline-none text-sm" /> -->
 
-  <div class="flex gap-2">
+  <div class="flex gap-2 relative z-10">
     <button *ngFor="let tab of tabs" (click)="activeTab = tab.id" class="px-4 py-2 rounded-full text-sm transition"
       [class.bg-blue-600]="activeTab === tab.id" [class.text-white]="activeTab === tab.id"
       [class.bg-gray-200]="activeTab !== tab.id">
@@ -12,14 +19,15 @@
     </button>
   </div>
 
-  <div *ngFor="let item of getList()"
+   @if(getList().length){
+      <div *ngFor="let item of getList()"
      (swipeRight)="markComplete(item)"
      (swipeLeft)="openDetails(item)"
     [ngClass]="{
        'swipe-right': swipedItem === item.name && swipeDirection === 'right',
        'swipe-left': swipedItem === item.name && swipeDirection === 'left'
      }"
-     class="card p-4 bg-white rounded-2xl shadow-md space-y-2 select-none">
+     class="card p-4 bg-white rounded-2xl shadow-md space-y-2 select-none relative z-10">
 
     <div class="flex justify-between items-center">
       <span class="text-lg font-semibold capitalize">{{ item.name }}</span>
@@ -78,6 +86,9 @@
 </div>
     </div>
   </div>
+   }@else {
+     <p class="min-h-[200px] text-center flex items-center justify-center text-3xl text-white relative z-10"><span>No Followups Available</span></p>
+   }
   
 <div *ngIf="showUndo"
      class="fixed bottom-5 left-1/2 -translate-x-1/2 bg-gray-900 text-white px-4 py-2 rounded-lg shadow-lg flex gap-3 text-sm animate-pop">
