--- a/src/app/leads/lead-add/lead-add.component.html
+++ b/src/app/leads/lead-add/lead-add.component.html
@@ -4,7 +4,7 @@
         <div
             class="absolute inset-0 bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 opacity-30 animate-gradient-x">
         </div>
-        <img src="assets/images/home.webp" alt="Background" class="w-full h-full object-cover brightness-75">
+        <img src="assets/images/bgnew.jpg" alt="Background" class="w-full h-full object-cover brightness-90">
         <div class="absolute inset-0 bg-black/25"></div>
     </div>
 
@@ -19,9 +19,9 @@
 
     <!-- Centered Form -->
     <div class="flex flex-1 items-center justify-center px-4 py-6 relative z-10">
-        <div class="max-w-2xl w-full bg-transparent backdrop-blur-md rounded-lg shadow-lg p-6 relative z-10">
+        <div class="max-w-2xl w-full bg-transparent  rounded-lg shadow-lg p-6 relative z-10">
             <div class="flex justify-between items-center">
-                <h2 class="text-2xl font-semibold mb-4 text-gray-900">Add Lead</h2>
+                <h2 class="text-3xl font-semibold mb-4 text-gray-900">Add Lead</h2>
                 <input #excelInput type="file" class="hidden" (change)="onFileChange($event)"
                     accept=".xlsx, .xls, .csv">
                 <button *ngIf="role.role == 'admin'" (click)="excelInput.click()"
