fix: add loading attribute to images for improved performance

--- a/src/app/leads/lead-add/lead-add.component.html
+++ b/src/app/leads/lead-add/lead-add.component.html
@@ -4,7 +4,7 @@
         <div
             class="absolute inset-0 bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 opacity-30 animate-gradient-x">
         </div>
-        <img src="assets/images/bgnew.jpg" alt="Background" class="w-full h-full object-cover brightness-90">
+        <img loading="eager" src="assets/images/bgnew.jpg" alt="Background" class="w-full h-full object-cover brightness-90">
         <div class="absolute inset-0 bg-black/25"></div>
     </div>
 
