--- a/src/app/leads/followup/followup.component.html
+++ b/src/app/leads/followup/followup.component.html
@@ -4,7 +4,7 @@
     <div
       class="absolute inset-0 bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 opacity-30 animate-gradient-x">
     </div>
-    <img src="assets/images/bg2.jpg" alt="Background" class="w-full h-full object-cover brightness-75">
+    <img loading="eager" src="assets/images/bg2.jpg" alt="Background" class="w-full h-full object-cover brightness-75">
     <div class="absolute inset-0 bg-black/25"></div>
   </div>
 
