--- a/src/app/leads/followup/followup.component.html
+++ b/src/app/leads/followup/followup.component.html
@@ -1,5 +1,6 @@
-<app-navbar [show]="true"></app-navbar>
-<div *ngIf="!loader" class="p-5 font-medium space-y-4">
+<div class="h-screen">
+  <app-navbar class="sticky top-0  z-[9999]" [show]="true"></app-navbar>
+  <div *ngIf="!loader" class="p-5 font-medium space-y-4 !h-[87vh]">
     <div class="absolute inset-0">
     <div
       class="absolute inset-0 bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 opacity-30 animate-gradient-x">
@@ -8,7 +9,11 @@
     <div class="absolute inset-0 bg-black/25"></div>
   </div>
 
-  <h2 class="text-xl font-bold relative z-10">Follow-ups</h2>
+  <div class="flex justify-between items-center">
+    <h2 class="text-2xl font-bold text-white relative z-10">Follow-ups</h2>
+     <input type="text" placeholder="Search name , emp.." class="p-2 rounded-full transition  text-black z-10"
+          [(ngModel)]="searchText" />
+  </div>
   <!-- <input type="text" placeholder="Search leads… 🔍" class="w-full p-3 rounded-xl bg-gray-100 outline-none text-sm" /> -->
 
   <div class="flex gap-2 relative z-10">
@@ -19,10 +24,9 @@
     </button>
   </div>
 
-   @if(getList().length){
-      <div *ngFor="let item of getList()"
-     (swipeRight)="markComplete(item)"
-     (swipeLeft)="openDetails(item)"
+ <div  class="flex flex-col gap-2 h-[90%] overflow-y-scroll">
+     @if(filteredLeads.length){
+      <div *ngFor="let item of filteredLeads"
     [ngClass]="{
        'swipe-right': swipedItem === item.name && swipeDirection === 'right',
        'swipe-left': swipedItem === item.name && swipeDirection === 'left'
@@ -89,11 +93,13 @@
    }@else {
      <p class="min-h-[200px] text-center flex items-center justify-center text-3xl text-white relative z-10"><span>No Followups Available</span></p>
    }
+ </div>
   
-<div *ngIf="showUndo"
+<!-- <div *ngIf="showUndo"
      class="fixed bottom-5 left-1/2 -translate-x-1/2 bg-gray-900 text-white px-4 py-2 rounded-lg shadow-lg flex gap-3 text-sm animate-pop">
   Marked done
   <button (click)="undo()" class="underline">Undo</button>
+</div> -->
 </div>
 </div>
 <app-loader *ngIf="loader" [loader]="loader"></app-loader>
